<resources>
    <string name="app_name">VolleyAPI-PHP</string>
    <string name="adminimage">AdminImage</string>
    <string name="username">Username...</string>
    <string name="password">Password...</string>
    <string name="login">Login</string>
    <string name="no_account">No account?</string>
    <string name="register">Register</string>
    <string name="user_login">User Login</string>
    <string name="registration">Registration</string>
    <string name="email">email</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="welcome_user">Welcome, User</string>
</resources>